feat(kotlin): add kotlin demos