@@ -1,15 +1,41 @@
-plugins {
-    application
-}
+import org.jetbrains.kotlin.gradle.tasks.KotlinCompile
 
 application {
-    mainClass.set("HelloRecords")
+    mainClass.set("DemoKt")
+}
+
+sourceSets.main {
+    java.srcDirs("src/main/java", "src/main/kotlin")
+}
+
+plugins {
+    application
+    kotlin("jvm") version "1.5.30"
+}
+
+repositories {
+    mavenCentral()
+}
+
+dependencies {
+    implementation(kotlin("stdlib-jdk8"))
+}
+
+val compileKotlin: KotlinCompile by tasks
+compileKotlin.kotlinOptions {
+    jvmTarget = "1.8"
+}
+
+val compileTestKotlin: KotlinCompile by tasks
+compileTestKotlin.kotlinOptions {
+    jvmTarget = "1.8"
 }
 
 tasks.withType<JavaCompile> {
     options.compilerArgs.add("-Xlint")
     options.compilerArgs.add("--enable-preview")
 }
+
 
 // Java 9
 tasks.register<JavaExec>("DemoPrivateMethodInInterface") {
@@ -100,3 +126,38 @@ tasks.register<JavaExec>("DemoSealedInterface") {
     mainClass.set("j16.DemoSealedInterface")
 }
 
+// Kotlin
+tasks.register<JavaExec>("DemoNullSafety") {
+    dependsOn("classes")
+    jvmArgs("--enable-preview")
+    classpath = sourceSets["main"].runtimeClasspath
+    mainClass.set("DemoNullSafetyKt")
+}
+
+tasks.register<JavaExec>("DemoFunctions") {
+    dependsOn("classes")
+    jvmArgs("--enable-preview")
+    classpath = sourceSets["main"].runtimeClasspath
+    mainClass.set("DemoFunctionsKt")
+}
+
+tasks.register<JavaExec>("DemoDataClasses") {
+    dependsOn("classes")
+    jvmArgs("--enable-preview")
+    classpath = sourceSets["main"].runtimeClasspath
+    mainClass.set("DemoDataClassesKt")
+}
+
+tasks.register<JavaExec>("DemoExtensions") {
+    dependsOn("classes")
+    jvmArgs("--enable-preview")
+    classpath = sourceSets["main"].runtimeClasspath
+    mainClass.set("DemoExtensionsKt")
+}
+
+tasks.register<JavaExec>("DemoStringInterpolation") {
+    dependsOn("classes")
+    jvmArgs("--enable-preview")
+    classpath = sourceSets["main"].runtimeClasspath
+    mainClass.set("DemoStringInterpolationKt")
+}
